<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.shenkar.todoapp.AddTask" >

<!--     
   <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EditText01"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_toLeftOf="@+id/create_activity_button"
        android:src="@android:drawable/ic_menu_gallery" />-->

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:height="50dp"
        android:hint="@string/task_description"
        android:textSize="25sp" />
		<requestFocus></requestFocus>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_description" 
        android:id="@+id/linearLayout1">
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:id="@+id/txtDate">
            
        </EditText>
        <Button android:layout_height="wrap_content"
            android:layout_weight="0" 
            android:id="@+id/btnCalendar" 
            android:text="@string/Calendar"
            android:layout_width="100dp"></Button>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/linearLayout1"
        android:id="@+id/linearLayout2">
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:id="@+id/txtTime">
            <requestFocus></requestFocus>
        </EditText>
        <Button android:layout_height="wrap_content"
            android:layout_weight="0" 
            android:id="@+id/btnTimePicker"
            android:text="@string/Time_Picker" 
            android:layout_width="100dp"></Button>
    </LinearLayout>

     <RadioButton
        android:id="@+id/alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/task_description"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="33dp"
        android:text="@string/alarm" />
    
    
    
    <Button
        android:id="@+id/create_activity_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/task_description"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="16dp"
        android:background="@color/darkGrey"
        android:hint="@string/create_button"
        android:onClick="createTask"
        android:textColorHint="@color/white"
        android:textSize="20sp" />


    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/create_activity_button"
        android:layout_toRightOf="@+id/create_activity_button"
        android:src="@android:drawable/ic_menu_delete" />

   

</RelativeLayout>